Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Referrals__c.object
<CustomObject>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <inlineHelpText>Numero de telephone</inlineHelpText>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Referrals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>